tests/ui/const-generics/mgca/nonsensical-negated-literal.stderr
error: negated literal must be an integer
  --> $DIR/nonsensical-negated-literal.rs:25:26
   |
LL |     foo::<{ Foo { field: -true } }>();
   |                          ^^^^^

error: negated literal must be an integer
  --> $DIR/nonsensical-negated-literal.rs:27:28
   |
LL |     foo::<{ Foo { field: { -true } } }>();
   |                            ^^^^^

error: negated literal must be an integer
  --> $DIR/nonsensical-negated-literal.rs:29:26
   |
LL |     foo::<{ Foo { field: -"<3" } }>();
   |                          ^^^^^

error: negated literal must be an integer
  --> $DIR/nonsensical-negated-literal.rs:31:28
   |
LL |     foo::<{ Foo { field: { -"<3" } } }>();
   |                            ^^^^^

error: negated literal must be an integer
  --> $DIR/nonsensical-negated-literal.rs:34:13
   |
LL |     bar::<{ -"hi" }>();
   |             ^^^^^

error: type annotations needed for the literal
  --> $DIR/nonsensical-negated-literal.rs:21:26
   |
LL |     foo::<{ Foo { field: -1_usize } }>();
   |                          ^^^^^^^^

error: type annotations needed for the literal
  --> $DIR/nonsensical-negated-literal.rs:23:28
   |
LL |     foo::<{ Foo { field: { -1_usize } } }>();
   |                            ^^^^^^^^

error: aborting due to 7 previous errors

